bugfix: query star and collect list set null when post is del
Signed-off-by: cbluebird <crk2778355976@163.com>